# SearchEngine

./: CMakeLists.txt
Crawler/: CMakeLists.txt  main.cpp
Crawler/Document Repository/: CMakeLists.txt  Document.cpp  Document.hpp  DocumentRepository.cpp  DocumentRepository.hpp
Crawler/LinkInfo/: CMakeLists.txt  LinkInfo.cpp  LinkInfo.hpp  LinkInfoRepository.cpp  LinkInfoRepository.hpp  LinkStatus.hpp
Crawler/MySQL/: mysql.hpp
Crawler/MySQLScripts/: Documents.sql  Links.sql  Websites.sql
Crawler/PageLoader/: CMakeLists.txt  Page.cpp  Page.hpp  PageLoader.cpp  PageLoader.hpp
Crawler/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
Crawler/WebsiteRepository/: CMakeLists.txt  Website.cpp  Website.hpp  WebsiteRepository.cpp  WebsiteRepository.hpp
Search/: CMakeLists.txt  main.cpp
Search/Server/: CMakeLists.txt  Server.cpp  Server.hpp
Search/Server/Search/: CMakeLists.txt  Search.cpp  Search.hpp
